--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Trouve",
-  "name": "Trouve - The Personalized and Collaborative List App",
+  "name": "Trouve ",
   "icons": [
     {
       "src": "favicon.ico",
